1685: Correct Width for search field on mobile

--- a/themes/ddbasic/sass/components/header.scss
+++ b/themes/ddbasic/sass/components/header.scss
@@ -388,6 +388,16 @@
           .form-actions {
             width: getColumn(1 of 12);
           }
+
+          // Mobile
+          @include media($mobile) {
+            .form-item-search-block-form {
+              width: getColumn(9 of 12) + getGutter(12);
+            }
+            .form-actions {
+              width: getColumn(3 of 12);
+            }
+          }
         }
       }
     }
